--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset=utf-8>
-    <base href="./ueat">
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=stylesheet href=static/css/reset.css>
-    <link rel=stylesheet href=static/ifont/close/iconfont.css>
-    <link rel=stylesheet href=static/ifont/yes/iconfont.css>
-    <link rel=stylesheet href=static/ifont/material/iconfont.css>
-    <link rel=stylesheet href=static/ifont/aixin/iconfont.css>
-    <link rel=stylesheet href=static/ifont/gouwuche/iconfont.css>
-    <link rel=stylesheet href=static/ifont/add/iconfont.css>
-    <link rel=stylesheet href=static/ifont/del/iconfont.css>
-    <link rel=stylesheet href=static/ifont/down/iconfont.css>
-    <script src=static/js/rem.js></script>
-    <title>eat</title>
-    <link href=static/css/app.a330d0f45431f59c986ec0f756255511.css rel=stylesheet>
-</head>
-
-<body>
-    <div id=app></div>
-    <script type=text/javascript src=static/js/manifest.dd473406591eca71292e.js></script>
-    <script type=text/javascript src=static/js/vendor.2ef719cf0cfee0d3169c.js></script>
-    <script type=text/javascript src=static/js/app.5f48fd973060e842ea13.js></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><base href=./ueat><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=static/css/reset.css><link rel=stylesheet href=static/ifont/close/iconfont.css><link rel=stylesheet href=static/ifont/yes/iconfont.css><link rel=stylesheet href=static/ifont/material/iconfont.css><link rel=stylesheet href=static/ifont/aixin/iconfont.css><link rel=stylesheet href=static/ifont/gouwuche/iconfont.css><link rel=stylesheet href=static/ifont/add/iconfont.css><link rel=stylesheet href=static/ifont/del/iconfont.css><link rel=stylesheet href=static/ifont/down/iconfont.css><script src=static/js/rem.js></script><title>eat</title><link href=/static/css/app.8683f8e01b52611c0ec9fa48cbdc53b8.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.45cdcd2318955a2e70fc.js></script><script type=text/javascript src=/static/js/vendor.2ef719cf0cfee0d3169c.js></script><script type=text/javascript src=/static/js/app.4a78790ac9c572f2c1c1.js></script></body></html>
