--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><base href=./ueat><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=static/css/reset.css><link rel=stylesheet href=static/ifont/close/iconfont.css><link rel=stylesheet href=static/ifont/yes/iconfont.css><link rel=stylesheet href=static/ifont/material/iconfont.css><link rel=stylesheet href=static/ifont/aixin/iconfont.css><link rel=stylesheet href=static/ifont/gouwuche/iconfont.css><link rel=stylesheet href=static/ifont/add/iconfont.css><link rel=stylesheet href=static/ifont/del/iconfont.css><link rel=stylesheet href=static/ifont/down/iconfont.css><script src=static/js/rem.js></script><title>eat</title><link href=/static/css/app.fece9b0c527c75ea71c0bad7c673e92a.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.ce9f1d661718697241d7.js></script><script type=text/javascript src=/static/js/vendor.2ef719cf0cfee0d3169c.js></script><script type=text/javascript src=/static/js/app.9fa661ea4149e0453521.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset=utf-8>
+    <base href=./ueat>
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <link rel=stylesheet href=static/css/reset.css>
+    <link rel=stylesheet href=static/ifont/close/iconfont.css>
+    <link rel=stylesheet href=static/ifont/yes/iconfont.css>
+    <link rel=stylesheet href=static/ifont/material/iconfont.css>
+    <link rel=stylesheet href=static/ifont/aixin/iconfont.css>
+    <link rel=stylesheet href=static/ifont/gouwuche/iconfont.css>
+    <link rel=stylesheet href=static/ifont/add/iconfont.css>
+    <link rel=stylesheet href=static/ifont/del/iconfont.css>
+    <link rel=stylesheet href=static/ifont/down/iconfont.css>
+    <script src=static/js/rem.js></script>
+    <title>eat</title>
+    <link href=static/css/app.fece9b0c527c75ea71c0bad7c673e92a.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=static/js/manifest.ce9f1d661718697241d7.js></script>
+    <script type=text/javascript src=static/js/vendor.2ef719cf0cfee0d3169c.js></script>
+    <script type=text/javascript src=static/js/app.9fa661ea4149e0453521.js></script>
+</body>
+
+</html>
